[package]
name = "pcf8591-hal"
version = "0.1.0"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
edition = "2018"
license = "Apache-2.0"
description = "Embedded-HAL driver for interfacing with the PCF8591 8-bit A/D and D/A converter"
repository = "https://github.com/hamaluik/pcf8591"
readme = "README.md"

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.3"

